tests/snapshots/feature_collision_handling.snap
---
source: tests/integration_test.rs
expression: output
---
# Cargo Features Report
# Generated by cargo-about-features
# This file lists the feature usage status for all dependencies in your project
# 
# Format:
# [package_name] - Features are grouped into three categories:
#   enabled: Features that are currently enabled and in use
#   unused: Features that are available but not enabled
#   dangling: Features that are defined but have no effect (workspace members only)
# 
# Note: Package names may include version numbers (e.g., "package@1.2.3") to handle
#       cases where multiple versions of the same package are used

[aho-corasick]
enabled = [
    "perf-literal",
    "std",
]
unused = [
    "default",
    "logging",
]

[collision_test]
enabled = []
unused = []

[memchr]
enabled = [
    "alloc",
    "std",
]
unused = [
    "core",
    "default",
    "libc",
    "logging",
    "rustc-dep-of-std",
    "use_std",
]

[regex]
enabled = [
    "default",
    "perf",
    "perf-backtrack",
    "perf-cache",
    "perf-dfa",
    "perf-inline",
    "perf-literal",
    "perf-onepass",
    "std",
    "unicode",
    "unicode-age",
    "unicode-bool",
    "unicode-case",
    "unicode-gencat",
    "unicode-perl",
    "unicode-script",
    "unicode-segment",
]
unused = [
    "logging",
    "pattern",
    "perf-dfa-full",
    "unstable",
    "use_std",
]

[regex-automata]
enabled = [
    "alloc",
    "default",
    "dfa",
    "dfa-build",
    "dfa-onepass",
    "dfa-search",
    "hybrid",
    "meta",
    "nfa",
    "nfa-backtrack",
    "nfa-pikevm",
    "nfa-thompson",
    "perf",
    "perf-inline",
    "perf-literal",
    "perf-literal-multisubstring",
    "perf-literal-substring",
    "std",
    "syntax",
    "unicode",
    "unicode-age",
    "unicode-bool",
    "unicode-case",
    "unicode-gencat",
    "unicode-perl",
    "unicode-script",
    "unicode-segment",
    "unicode-word-boundary",
]
unused = [
    "internal-instrument",
    "internal-instrument-pikevm",
    "logging",
]

["regex-automata@0.4.13"]
enabled = [
    "alloc",
    "dfa-onepass",
    "hybrid",
    "meta",
    "nfa-backtrack",
    "nfa-pikevm",
    "nfa-thompson",
    "perf-inline",
    "perf-literal",
    "perf-literal-multisubstring",
    "perf-literal-substring",
    "std",
    "syntax",
    "unicode",
    "unicode-age",
    "unicode-bool",
    "unicode-case",
    "unicode-gencat",
    "unicode-perl",
    "unicode-script",
    "unicode-segment",
    "unicode-word-boundary",
]
unused = [
    "default",
    "dfa",
    "dfa-build",
    "dfa-search",
    "internal-instrument",
    "internal-instrument-pikevm",
    "logging",
    "nfa",
    "perf",
]

[regex-syntax]
enabled = [
    "std",
    "unicode",
    "unicode-age",
    "unicode-bool",
    "unicode-case",
    "unicode-gencat",
    "unicode-perl",
    "unicode-script",
    "unicode-segment",
]
unused = [
    "arbitrary",
    "default",
]

["regex-syntax@0.8.8"]
enabled = [
    "default",
    "std",
    "unicode",
    "unicode-age",
    "unicode-bool",
    "unicode-case",
    "unicode-gencat",
    "unicode-perl",
    "unicode-script",
    "unicode-segment",
]
unused = ["arbitrary"]
