tests/snapshots/workspace_project_analysis.snap
---
source: tests/integration_test.rs
expression: output
---
# Cargo Features Report
# Generated by cargo-about-features
# This file lists the feature usage status for all dependencies in your project
# 
# Format:
# [package_name] - Features are grouped into three categories:
#   enabled: Features that are currently enabled and in use
#   unused: Features that are available but not enabled
#   dangling: Features that are defined but have no effect (workspace members only)
# 
# Note: Package names may include version numbers (e.g., "package@1.2.3") to handle
#       cases where multiple versions of the same package are used

[crate-a]
enabled = []
unused = []

[crate-b]
enabled = []
unused = []

[equivalent]
enabled = []
unused = []

[hashbrown]
enabled = []
unused = [
    "alloc",
    "allocator-api2",
    "core",
    "default",
    "default-hasher",
    "equivalent",
    "inline-more",
    "nightly",
    "raw-entry",
    "rayon",
    "rustc-dep-of-std",
    "rustc-internal-api",
    "serde",
]

[indexmap]
enabled = [
    "default",
    "std",
]
unused = [
    "arbitrary",
    "borsh",
    "quickcheck",
    "rayon",
    "serde",
    "sval",
    "test_debug",
]

[memchr]
enabled = [
    "alloc",
    "std",
]
unused = [
    "core",
    "default",
    "libc",
    "logging",
    "rustc-dep-of-std",
    "use_std",
]

[proc-macro2]
enabled = ["proc-macro"]
unused = [
    "default",
    "nightly",
    "span-locations",
]

[quote]
enabled = ["proc-macro"]
unused = ["default"]

[serde]
enabled = [
    "default",
    "derive",
    "serde_derive",
    "std",
]
unused = [
    "alloc",
    "rc",
    "unstable",
]

[serde_core]
enabled = [
    "result",
    "std",
]
unused = [
    "alloc",
    "default",
    "rc",
    "unstable",
]

[serde_derive]
enabled = ["default"]
unused = ["deserialize_in_place"]

[serde_spanned]
enabled = ["serde"]
unused = []

[syn]
enabled = [
    "clone-impls",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
]
unused = [
    "default",
    "extra-traits",
    "fold",
    "full",
    "test",
    "visit",
    "visit-mut",
]

[toml]
enabled = [
    "default",
    "display",
    "parse",
]
unused = [
    "indexmap",
    "preserve_order",
    "unbounded",
]

[toml_datetime]
enabled = ["serde"]
unused = []

[toml_edit]
enabled = [
    "display",
    "parse",
    "serde",
]
unused = [
    "default",
    "perf",
    "unbounded",
    "unstable-debug",
]

[toml_write]
enabled = [
    "alloc",
    "default",
    "std",
]
unused = []

[unicode-ident]
enabled = []
unused = []

[winnow]
enabled = [
    "alloc",
    "default",
    "std",
]
unused = [
    "debug",
    "simd",
    "unstable-doc",
    "unstable-recover",
]
